--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -1,6 +1,33 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css2?family=Lato:wght@300;
 
 400;900&display=swap);@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oswald&display=swap);@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap);@import url(https://fonts.googleapis.com/css2?family=Suez+One&display=swap);@charset "UTF-8";
+.footer {
+  background-color: #f8fafc;
+  color: black !important;
+  padding: 48px;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+p {
+  text-align: left;
+  color: black;
+}
+
+.privacy-footer {
+  background-color: #b6babd;
+}
+
+/*!
+ * Bootstrap v4.5.0 (https://getbootstrap.com/)
+ * Copyright 2011-2020 The Bootstrap Authors
+ * Copyright 2011-2020 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
 
 :root {
   --blue: #3490dc;
@@ -10939,12 +10966,21 @@ body {
   font-family: "Abril Fatface", cursive;
 }
 
-a {
-  color: #fff;
-}
-
 a:hover {
   color: #FF9800;
+  text-decoration: none;
+}
+
+.navbar-nav > li {
+  float: left;
+  position: relative;
+}
+
+a:active {
+  bottom: 0;
+  left: 0;
+  content: " ";
+  border-bottom: 1px solid #d77464;
 }
 
 .nav-menu {
@@ -10957,6 +10993,18 @@ a:hover {
   letter-spacing: 0.1rem;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+li > a {
+  color: #fff;
+}
+
+p > a {
+  color: black;
+}
+
+p > a:hover {
+  color: #1e4949;
 }
 
 .full-height {
