--- a/laravel/resources/sass/app.scss
+++ b/laravel/resources/sass/app.scss
@@ -7,6 +7,7 @@
 
 // Variables
 @import 'variables';
+@import 'footer';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
@@ -27,13 +28,25 @@ html, body {
 	font-family: 'Abril Fatface', cursive;
 }
 
-a{
-	color: #fff;
-}
-
 a:hover {
     color: #FF9800;
+    text-decoration: none;
+
 }
+
+.navbar-nav > li {
+  float: left;
+  position: relative;
+}
+
+a:active {
+
+    bottom: 0;
+    left: 0;
+    content: " ";
+    border-bottom: 1px solid #d77464;
+}
+
 
 .nav-menu {
 
@@ -49,6 +62,19 @@ a:hover {
     text-decoration: none;
     text-transform: uppercase;
 
+}
+
+li > a{
+    color: #fff;
+}
+
+p > a{
+    color: black;
+}
+
+p >a:hover {
+
+    color: #1e4949;
 }
 
 .nav-link:hover, .nav-link:focus {
