--- a/laravel/public/css/cover.css
+++ b/laravel/public/css/cover.css
@@ -1,7 +1,36 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css2?family=Lato:wght@300;
 
 400;900&display=swap);@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oswald&display=swap);@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap);@import url(https://fonts.googleapis.com/css2?family=Suez+One&display=swap);@charset "UTF-8";
+.footer {
+  background-color: #f8fafc;
+  color: black !important;
+  padding: 48px;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
 
+p {
+  text-align: left;
+}
+
+.privacy-footer {
+  background-color: #b6babd;
+}
+
+/*
+ * Globals
+ */
+
+/*!
+ * Bootstrap v4.5.0 (https://getbootstrap.com/)
+ * Copyright 2011-2020 The Bootstrap Authors
+ * Copyright 2011-2020 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
 
 :root {
   --blue: #007bff;
@@ -10955,12 +10984,8 @@ body {
   font-weight: 200;
   height: 100vh;
   margin: 0;
-}
-
-body {
-  display: flex;
+  display: -ms-flexbox;
   color: #fff;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
@@ -10978,16 +11003,22 @@ body {
 
 .masthead-brand {
   margin-bottom: 0;
-  font-size: xx-large;
   font-family: "Abril Fatface", cursive;
 }
 
 .nav-masthead .nav-link {
   padding: 0.25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(249, 245, 245, 0.71);
   background-color: transparent;
   border-bottom: 0.25rem solid transparent;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: "Nunito", sans-serif;
+  font-size: 13px;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .nav-masthead .nav-link:hover,
@@ -11028,11 +11059,23 @@ body {
   font-weight: 700;
 }
 
+.cover-heading {
+  font-weight: bold;
+}
+
 /*
  * Footer
  */
 
 .mastfoot {
   color: rgba(255, 255, 255, 0.5);
+}
+
+p > a {
+  color: black;
+}
+
+p > a:hover {
+  color: #1e4949;
 }
 
