--- a/laravel/resources/sass/cover.scss
+++ b/laravel/resources/sass/cover.scss
@@ -5,6 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Suez+One&display=swap');
 
+@import 'footer';
+
+
 /*
  * Globals
  */
@@ -37,18 +40,13 @@ a:hover {
 html,
 body {
   background-color: #1e4949;
-
   font-family: 'Lato', sans-serif;
   font-weight: 200;
   height: 100vh;
   margin: 0;
-}
 
-body {
   display: -ms-flexbox;
-  display: flex;
   color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
@@ -66,16 +64,24 @@ body {
 
 .masthead-brand {
   margin-bottom: 0;
-  font-size: xx-large;
   font-family: 'Abril Fatface', cursive;
 }
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(249, 245, 245, 0.71);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
+
+    margin-right: auto;
+    margin-left: auto;
+    font-family: 'Nunito', sans-serif;
+
+    font-size: 13px;
+    letter-spacing: 0.1rem;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 .nav-masthead .nav-link:hover,
@@ -113,10 +119,23 @@ body {
   font-weight: 700;
 }
 
+.cover-heading{
+  font-weight: bold;
+}
+
 
 /*
  * Footer
  */
 .mastfoot {
   color: rgba(255, 255, 255, .5);
+}
+
+p > a{
+    color: black;
+}
+
+p >a:hover {
+
+    color: #1e4949;
 }
