--- a/laravel/resources/sass/contactus.scss
+++ b/laravel/resources/sass/contactus.scss
@@ -5,28 +5,131 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Suez+One&display=swap');
 
-// Variables
-@import 'variables';
 @import 'footer';
 
-// Bootstrap
+
+/*
+ * Globals
+ */
+
+ // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-html, body {
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
+}
 
-    background-color: #1e4949;
-    color: black;
-    font-family: 'Lato', sans-serif;
-    font-weight: 200;
-    height: 100vh;
-    margin: 0;
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+/* Custom default button */
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: #fff;
+  border: .05rem solid #fff;
+}
+
+
+/*
+ * Base structure
+ */
+
+html,
+body {
+  background-color: #1e4949;
+  font-family: 'Lato', sans-serif;
+  font-weight: 200;
+  height: 100vh;
+  margin: 0;
+
+  display: -ms-flexbox;
+  color: #fff;
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #d27363;
-    border-color: #fff;
+.cover-container {
+  max-width: 42em;
+}
+
+/*
+ * Header
+ */
+.masthead {
+  margin-bottom: 2rem;
+
+}
+
+.masthead-brand {
+  margin-bottom: 0;
+  font-family: 'Abril Fatface', cursive;
+}
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(249, 245, 245, 0.71);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+
+    margin-right: auto;
+    margin-left: auto;
+    font-family: 'Nunito', sans-serif;
+
+    font-size: 13px;
+    letter-spacing: 0.1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+/*
+ * Cover
+ */
+.cover {
+  padding: 0 1.5rem;
+}
+
+.cover .btn-lg {
+  padding: .75rem 1.25rem;
+  font-weight: 700;
+}
+
+.cover-heading{
+  font-weight: bold;
 }
 
 /* this setting is for the background image women image to be specific*/
@@ -40,77 +143,29 @@ html, body {
   background-position:center;
 }
 
-.navbar-brand{
-	color: #fff;
-	//font-weight: 900;
-	//font-family: 'Lato', sans-serif;
-	font-size: xx-large;
-	font-family: 'Abril Fatface', cursive;
+/*
+ * Footer
+ */
+.mastfoot {
+  color: rgba(255, 255, 255, .5);
 }
 
-.btn-primary:hover {
+h5{
+    color: black;
+}
+
+.btn-primary {
     color: #fff;
-    background-color: #1e4949;
-    border-color: #1e4949;
+    background-color: #d77464;
+    border-color: #d77464;
 }
 
-a:hover {
-    color: #FF9800;
-    text-decoration: none;
-
+.card-body > p {
+    text-align: center;
 }
 
-.navbar-nav > li {
-  float: left;
-  position: relative;
-}
-
-.navbar-bg{
-        background-color: #1e4949;
-}
-
-a:active {
-
-    bottom: 0;
-    left: 0;
-    content: " ";
-    border-bottom: 1px solid #d77464;
-}
-
-
-.nav-menu {
-
-	padding-top: 17px;
-    margin-right: auto;
-    margin-left: auto;
-    font-family: 'Nunito', sans-serif;
-
-    //padding: 0 25px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: 0.1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-
-}
-
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-}
-
-
-li > a{
-    color: #fff;
+p{
+    color:black;
 }
 
 p > a{
@@ -122,62 +177,18 @@ p >a:hover {
     color: #1e4949;
 }
 
-.nav-link:hover, .nav-link:focus {
-	
-    //text-decoration: underline;
-    //text-decoration-style: wavy;
+.card-header{
 
-
+color: black;
+font-size: large;
+font-weight: bold;
+    
+}
+.card{
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
-.full-height {
-    height: 100vh;
-}
-
-.flex-center {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.position-ref {
-    position: relative;
-}
-
-.top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
-}
-
-.content {
-    text-align: center;
-}
-
-.navbar {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0px;
-}
-
-.title {
-    font-size: 84px;
-    font-family: 'Suez One', serif;
-}
-
-.links > a {
-    color: #636b6f;
-    padding: 0 25px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.m-b-md {
-    margin-bottom: 30px;
+.card-title {
+    border-bottom: 1px solid #e4dcdc;
 }
