menu list and controller are created

--- a/laravel/resources/sass/contactus.scss
+++ b/laravel/resources/sass/contactus.scss
@@ -187,6 +187,7 @@ font-weight: bold;
 .card{
     padding-left: 0px;
     padding-right: 0px;
+    background-color: #ffffff91;
 }
 
 .card-title {
