--- a/laravel/public/css/cover.css
+++ b/laravel/public/css/cover.css
@@ -2,6 +2,23 @@
 
 400;900&display=swap);@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oswald&display=swap);@import url(https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap);@import url(https://fonts.googleapis.com/css2?family=Suez+One&display=swap);@charset "UTF-8";
 .footer {
+  position: relative;
+  bottom: 0;
+}
+
+p {
+  text-align: left;
+}
+
+.privacy-footer {
+  background-color: #b6babd;
+}
+
+privacy-footer > p {
+  text-align: center !important;
+}
+
+.footer-menu {
   background-color: #f8fafc;
   color: black !important;
   padding: 48px;
@@ -11,14 +28,6 @@
   letter-spacing: 0.1rem;
   text-decoration: none;
   text-transform: uppercase;
-}
-
-p {
-  text-align: left;
-}
-
-.privacy-footer {
-  background-color: #b6babd;
 }
 
 /*
@@ -10973,6 +10982,10 @@ a:hover {
   border: 0.05rem solid #fff;
 }
 
+.footer-center-sm > p {
+  text-align: center !important;
+}
+
 /*
  * Base structure
  */
@@ -10984,9 +10997,19 @@ body {
   font-weight: 200;
   height: 100vh;
   margin: 0;
+  position: relative;
   display: -ms-flexbox;
   color: #fff;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .cover-container {
