--- a/laravel/resources/sass/contactus.scss
+++ b/laravel/resources/sass/contactus.scss
@@ -40,6 +40,10 @@ a:hover {
   border: .05rem solid #fff;
 }
 
+.footer-center-sm > p{
+
+  text-align: center !important;
+}
 
 /*
  * Base structure
@@ -52,11 +56,8 @@ body {
   font-weight: 200;
   height: 100vh;
   margin: 0;
-
   display: -ms-flexbox;
   color: #fff;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-
 }
 
 .cover-container {
