--- a/laravel/resources/sass/cover.scss
+++ b/laravel/resources/sass/cover.scss
@@ -32,6 +32,10 @@ a:hover {
   border: .05rem solid #fff;
 }
 
+.footer-center-sm > p{
+
+  text-align: center !important;
+}
 
 /*
  * Base structure
@@ -45,9 +49,25 @@ body {
   height: 100vh;
   margin: 0;
 
+
+ 
+  position: relative;
+
+
   display: -ms-flexbox;
   color: #fff;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  //box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .cover-container {
