--- a/laravel/public/css/cover.css
+++ b/laravel/public/css/cover.css
@@ -12,7 +12,6 @@ p {
 
 .privacy-footer {
   background-color: #b6babd;
-  text-align: center !important;
 }
 
 privacy-footer > p {
@@ -10985,6 +10984,13 @@ a:hover {
 
 .footer-center-sm > p {
   text-align: center !important;
+}
+
+.image-projects {
+  background-image: url("/storage/images/projects-pic.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 /*
