--- a/laravel/resources/sass/app.scss
+++ b/laravel/resources/sass/app.scss
@@ -11,6 +11,8 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~font-awesome/scss/font-awesome.scss';
+
 
 html, body {
     background-color: #1e4949;
