--- a/laravel/public/css/cover.css
+++ b/laravel/public/css/cover.css
@@ -14154,3 +14154,48 @@ p > a:hover {
   color: #1e4949;
 }
 
+.divider {
+  /* minor cosmetics */
+  display: table;
+  font-size: 24px;
+  text-align: center;
+  width: 75%;
+  /* divider width */
+  margin: 40px auto;
+  /* spacing above/below */
+}
+
+.divider span {
+  display: table-cell;
+  position: relative;
+}
+
+.divider span:first-child,
+.divider span:last-child {
+  width: 50%;
+  top: 13px;
+  /* adjust vertical align */
+  /* line width */
+  background-size: 100% 2px;
+  /* line width */
+  background-position: 0 0, 0 100%;
+  background-repeat: no-repeat;
+}
+
+.divider span:first-child {
+  /* color changes in here */
+  background-image: linear-gradient(90deg, transparent, #fff);
+}
+
+.divider span:nth-child(2) {
+  color: #fff;
+  padding: 0px 5px;
+  width: auto;
+  white-space: nowrap;
+}
+
+.divider span:last-child {
+  /* color changes in here */
+  background-image: linear-gradient(90deg, #fff, transparent);
+}
+
