--- a/laravel/resources/sass/cover.scss
+++ b/laravel/resources/sass/cover.scss
@@ -7,7 +7,6 @@
 
 @import 'footer';
 
-
 /*
  * Globals
  */
@@ -16,39 +15,36 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/scss/font-awesome.scss';
 
-
 /* Links */
 a,
 a:focus,
 a:hover {
-  color: #fff;
+    color: #fff;
 }
 
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+    color: #333;
+    text-shadow: none; /* Prevent inheritance from `body` */
+    background-color: #fff;
+    border: .05rem solid #fff;
 }
 
 .footer-center-sm > p{
-
-  text-align: center !important;
+    text-align: center !important;
 }
 
 .image-projects{
-  background-image: url('/storage/images/projects-pic.jpeg');
-  background-repeat:no-repeat;
-  -webkit-background-size:cover;
-  -moz-background-size:cover;
-  -o-background-size:cover;
-  background-size:cover;
-  background-position:center;
+    background-image: url('/storage/images/projects-pic.jpeg');
+    background-repeat:no-repeat;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+    background-size:cover;
+    background-position:center;
 }
-
 
 /*
  * Base structure
@@ -56,21 +52,14 @@ a:hover {
 
 html,
 body {
-  background-color: #1e4949;
-  font-family: 'Lato', sans-serif;
-  font-weight: 200;
-  height: 100vh;
-  margin: 0;
-
-
- 
-  position: relative;
-
-
-  display: -ms-flexbox;
-  color: #fff;
-  //box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-
+    background-color: #1e4949;
+    font-family: 'Lato', sans-serif;
+    font-weight: 200;
+    height: 100vh;
+    margin: 0;
+    position: relative;
+    display: -ms-flexbox;
+    color: #fff;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -84,83 +73,80 @@ body {
 }
 
 .cover-container {
-  max-width: 42em;
+    max-width: 42em;
 }
-
 
 /*
  * Header
  */
 .masthead {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 .masthead-brand {
-  margin-bottom: 0;
-  font-family: 'Abril Fatface', cursive;
+    margin-bottom: 0;
+    font-family: 'Abril Fatface', cursive;
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(249, 245, 245, 0.71);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-
-  margin-right: auto;
-  margin-left: auto;
-  font-family: 'Nunito', sans-serif;
-
-  font-size: 13px;
-  letter-spacing: 0.1rem;
-  text-decoration: none;
-  text-transform: uppercase;
+    padding: .25rem 0;
+    font-weight: 700;
+    color: rgba(249, 245, 245, 0.71);
+    background-color: transparent;
+    border-bottom: .25rem solid transparent;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: 'Nunito', sans-serif;
+    font-size: 13px;
+    letter-spacing: 0.1rem;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+    border-bottom-color: rgba(255, 255, 255, .25);
 }
 
 .nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
+    margin-left: 1rem;
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+    color: #fff;
+    border-bottom-color: #fff;
 }
 
 @media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-  .nav-masthead {
-    float: right;
-  }
+    .masthead-brand {
+        float: left;
+    }
+    .nav-masthead {
+        float: right;
+    }
 }
-
 
 /*
  * Cover
  */
 .cover {
-  padding: 0 1.5rem;
+    padding: 0 1.5rem;
 }
+
 .cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
+    padding: .75rem 1.25rem;
+    font-weight: 700;
 }
 
 .cover-heading{
-  font-weight: bold;
+    font-weight: bold;
 }
 
 /*
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+    color: rgba(255, 255, 255, .5);
 }
 
 p > a{
@@ -168,41 +154,47 @@ p > a{
 }
 
 p >a:hover {
-
     color: #1e4949;
 }
 
 .divider {                /* minor cosmetics */
-            display: table; 
-            font-size: 24px; 
-            text-align: center; 
-            width: 75%;             /* divider width */
-            margin: 40px auto;          /* spacing above/below */
-        }
+    display: table;
+    font-size: 24px;
+    text-align: center;
+    width: 75%;             /* divider width */
+    margin: 40px auto;      /* spacing above/below */
+}
 
-        .divider span { display: table-cell; position: relative; }
-        .divider span:first-child, .divider span:last-child {
-            width: 50%;
-            top: 13px;              /* adjust vertical align */
-            -moz-background-size: 100% 2px;   /* line width */
-            background-size: 100% 2px;      /* line width */
-            background-position: 0 0, 0 100%;
-            background-repeat: no-repeat;
-        }
-        .divider span:first-child {       /* color changes in here */
-            background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#000));
-            background-image: -webkit-linear-gradient(180deg, transparent, #fff);
-            background-image: -moz-linear-gradient(180deg, transparent, #fff);
-            background-image: -o-linear-gradient(180deg, transparent, #fff);
-            background-image: linear-gradient(90deg, transparent, #fff);
-        }
-        .divider span:nth-child(2) {
-            color: #fff; padding: 0px 5px; width: auto; white-space: nowrap;
-        }
-        .divider span:last-child {        /* color changes in here */
-            background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(transparent));
-            background-image: -webkit-linear-gradient(180deg, #fff, transparent);
-            background-image: -moz-linear-gradient(180deg, #fff, transparent);
-            background-image: -o-linear-gradient(180deg, #fff, transparent);
-            background-image: linear-gradient(90deg, #fff, transparent);
-        }
+.divider span {
+    display: table-cell;
+    position: relative;
+}
+.divider span:first-child,
+.divider span:last-child {
+    width: 50%;
+    top: 13px;                          /* adjust vertical align */
+    -moz-background-size: 100% 2px;     /* line width */
+    background-size: 100% 2px;          /* line width */
+    background-position: 0 0, 0 100%;
+    background-repeat: no-repeat;
+}
+.divider span:first-child {       /* color changes in here */
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#000));
+    background-image: -webkit-linear-gradient(180deg, transparent, #fff);
+    background-image: -moz-linear-gradient(180deg, transparent, #fff);
+    background-image: -o-linear-gradient(180deg, transparent, #fff);
+    background-image: linear-gradient(90deg, transparent, #fff);
+}
+.divider span:nth-child(2) {
+    color: #fff;
+    padding: 0px 5px;
+    width: auto;
+    white-space: nowrap;
+}
+.divider span:last-child {        /* color changes in here */
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(transparent));
+    background-image: -webkit-linear-gradient(180deg, #fff, transparent);
+    background-image: -moz-linear-gradient(180deg, #fff, transparent);
+    background-image: -o-linear-gradient(180deg, #fff, transparent);
+    background-image: linear-gradient(90deg, #fff, transparent);
+}
