--- a/laravel/resources/sass/cover.scss
+++ b/laravel/resources/sass/cover.scss
@@ -172,6 +172,12 @@ p >a:hover {
     color: #1e4949;
 }
 
+.map{
+
+  width: 400px;
+  height: 200px;
+}
+
 .divider {                /* minor cosmetics */
             display: table; 
             font-size: 24px; 
